[project]
name = "refaine"
version = "1.0.0"
description = "FastAPI microservice that transforms casual prompts into expert-level AI engineering prompts using multiple LLM providers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "anthropic>=0.42.0",
    "openai>=1.59.5",
    "pydantic>=2.0.0",
]
